--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,12 @@
+body {
+  color: #333 !important;
+  font: 400 16px/24px Roboto, sans-serif;
+}
+
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
+
+.badge { background: blue; border: solid 1px lightskyblue; color: lightskyblue; border-radius: 5px; padding:2px;font-size: 90%; }
