Add inline styles to component.

--- a/public/style.css
+++ b/public/style.css
@@ -9,4 +9,4 @@ h1 {
   font-size: 250%;
 }
 
-.badge { background: blue; border: solid 1px lightskyblue; color: lightskyblue; border-radius: 5px; padding:2px;font-size: 90%; }
+.badge__ { background: blue; border: solid 1px lightskyblue; color: lightskyblue; border-radius: 5px; padding:2px;font-size: 90%; }
