--- a/public/style.css
+++ b/public/style.css
@@ -3,10 +3,26 @@ body {
   font: 400 16px/24px Roboto, sans-serif;
 }
 
+/* Master Styles */
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
-
-.badge__ { background: blue; border: solid 1px lightskyblue; color: lightskyblue; border-radius: 5px; padding:2px;font-size: 90%; }
+h2, h3 {
+  color: #444;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+}
+body {
+  margin: 2em;
+}
+body, input[text], button {
+  color: #888;
+  font-family: Cambria, Georgia;
+}
+/* . . . */
+/* everywhere else */
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
