Manage Update of a postcode.

--- a/templates/postcode detail.html
+++ b/templates/postcode detail.html
@@ -8,4 +8,5 @@
         <input [(ngModel)]="postcode.description" placeholder="description/name" />
     </div>
     <button (click)="goBack()">back</button>
+    <button (click)="save()">save</button>
 </div>
