Correct color on over of delete button. Reduce the size of H1.

--- a/templates/postcode list.css
+++ b/templates/postcode list.css
@@ -64,4 +64,4 @@ button.delete {
   background-color: gray !important;
   color: white;
 }
-button.delete:hover { background-color: darkred;}
+button.delete:hover { background-color: darkred !important; }
