Add a textbox and a list of result to the postcode search component. Set the placeholder for the search and gotoDetail methods. Set the CSS styles.

--- a/templates/postcode search.html
+++ b/templates/postcode search.html
@@ -1,3 +1,10 @@
 <div>
-postcode search
+    <h4>Search</h4>
+    <input #search id="search-box" (keyup)="search(search.value)" />
+    <div>
+        <div *ngFor="let postcode of postcodes | async"
+            (click)="gotoDetail(postcode)" class="search-result">
+            {{postcode.code}} - {{postcode.description}}
+        </div>
+    </div>
 </div>
