Remove in-memory service. Create Listing Service. Create ListingList Component (with HTML template and CSS). Add link to Listing list. Create Listing entity (basic).

--- a/templates/postcode list.html
+++ b/templates/postcode list.html
@@ -18,4 +18,5 @@
 <div *ngIf="selectedPostcode">
     <h2>{{selectedPostcode.code}}</h2>
     <button (click)="gotoDetail()">View details</button>
+    <button (click)="gotoListings()">View listings</button>
 </div>
