--- a/templates/listing list.css
+++ b/templates/listing list.css
@@ -1,67 +1,17 @@
-.selected {
+table {
+  border-radius: 4px 0 0 4px;
   background-color: #CFD8DC !important;
   color: white;
+  border: 1px solid #607D8B;
 }
-.postcodes {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
-  width: 15em;
-}
-.postcodes li {
-  cursor: pointer;
-  position: relative;
-  left: 0;
-  background-color: #EEE;
-  margin: .5em;
-  padding: .3em 0;
-  height: 1.6em;
-  border-radius: 4px;
-}
-.postcodes li:hover {
+th {
   color: #607D8B;
-  background-color: #DDD;
-  left: .1em;
 }
-.postcodes li.selected:hover {
-  background-color: #BBD8DC !important;
-  color: white;
+tr {
+  color: #666;
+  background-color: #BBD8DC;
 }
-.postcodes .text {
-  position: relative;
-  top: -3px;
+tr:hover {
+  background-color: #607D8B !important;
+  color: 333;
 }
-.postcodes .badge {
-  display: inline-block;
-  font-size: small;
-  color: white;
-  padding: 0.8em 0.7em 0 0.7em;
-  background-color: #607D8B;
-  line-height: 1em;
-  position: relative;
-  left: -1px;
-  top: -4px;
-  height: 1.8em;
-  margin-right: .8em;
-  border-radius: 4px 0 0 4px;
-}
-button {
-  font-family: Arial;
-  background-color: #eee;
-  border: none;
-  padding: 5px 10px;
-  border-radius: 4px;
-  cursor: pointer;
-  cursor: hand;
-}
-button:hover {
-  background-color: #cfd8dc;
-}
-button.delete {
-  float: right;
-  /*margin-top: 2px;*/
-  margin-right: .5em;
-  background-color: gray !important;
-  color: white;
-}
-button.delete:hover { background-color: darkred !important; }
