Add Agency entity. Add AgencyService. Add AgencyList Component with HTML template and CSS.

--- a/templates/app.html
+++ b/templates/app.html
@@ -2,5 +2,6 @@
 <nav>
     <a routerLink="/dashboard">Dashboard</a>
     <a routerLink="/postcodes">Post codes</a>
+    <a routerLink="/agencies">Agencies</a>
 </nav>
 <router-outlet><router-outlet>
