--- a/templates/listing list.html
+++ b/templates/listing list.html
@@ -19,6 +19,7 @@
         <th>Latitude</th>
         <th>Longitude</th>
         <th>Address</th>
+        <th>Zoopla adv.</th>
     </thead>
     <tbody>
         <tr *ngFor="let listing of listings; let i = index">
@@ -32,6 +33,7 @@
             <td>{{listing.latitude}}</td>
             <td>{{listing.longitude}}</td>
             <td>{{listing.address}}</td>
+            <td><a href="{{listing.zooplaUrl}}" target="_blank">link</a></td>
         </tr>
     </tbody>
 </table>
