Add Component for Agency Statistics and empty template.

--- a/templates/app.html
+++ b/templates/app.html
@@ -3,5 +3,6 @@
     <a routerLink="/dashboard">Dashboard</a>
     <a routerLink="/postcodes">Post codes</a>
     <a routerLink="/agencies">Agencies</a>
+    <a routerLink="/agencies/stats">Agencies Statistics</a>
 </nav>
 <router-outlet><router-outlet>
