Move Agency service into "service" folder. Add search function to component.

--- a/templates/agency stats.html
+++ b/templates/agency stats.html
@@ -1,2 +1,15 @@
 <h2>Agency Statistics </h2>
 
+<div>
+    <label>Post code</label>
+    <input type="text" #input_postcode />
+    <button value="Search" (click)="search(input_postcode.value)"></button>
+</div>
+
+<div>
+
+    <p>
+<h3>Apologies, this page in work in progress.</h3>
+    </p>
+
+</div>
