Correct HTML  template.

--- a/templates/agency stats.html
+++ b/templates/agency stats.html
@@ -3,13 +3,13 @@
 <div>
     <label>Post code</label>
     <input type="text" #input_postcode />
-    <button value="Search" (click)="search(input_postcode.value)"></button>
+    <button (click)="search(input_postcode.value)">Search</button>
 </div>
 
 <div>
 
-    <p>
-<h3>Apologies, this page in work in progress.</h3>
-    </p>
+    
+        <h3 style="color:red">Apologies, this page in work in progress.</h3>
+    
 
 </div>
