--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@ h2, h3 {
   font-weight: lighter;
 }
 body {
-  margin: 2em;
+  margin: 0.5em 2em;
 }
 body, input[text], button {
   color: #888;
@@ -26,3 +26,16 @@ body, input[text], button {
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+#topBar {
+  /*background-color: rgb(152, 53, 146);*/
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(122, 42, 118)), to(rgb(152, 53, 146)));
+  background-image: -webkit-linear-gradient(top, rgb(122, 42, 118), rgb(152, 53, 146));
+  background-image: -moz-linear-gradient(top, rgb(122, 42, 118), rgb(152, 53, 146));
+  background-image: linear-gradient(to bottom, rgb(122, 42, 118), rgb(152, 53, 146));
+  color: #eee;
+  padding: 6px 12px;
+  border-radius: 2px;
+}
+
+#topBar h1 { color: #eee; margin:auto; }
