Add "start" script needed by Heroku.

--- a/templates/app.html
+++ b/templates/app.html
@@ -2,7 +2,7 @@
 <nav>
     <a routerLink="/dashboard">Dashboard</a>
     <a routerLink="/postcodes">Post codes</a>
-    <a routerLink="/agencies">Agencies</a>
-    <a routerLink="/agencies/stats">Agencies Statistics</a>
+    <a routerLink="/agencies">Agencies list</a>
+    <a routerLink="/agencies/stats">Agencies statistics</a>
 </nav>
 <router-outlet><router-outlet>
