--- a/templates/postcode list.css
+++ b/templates/postcode list.css
@@ -1,42 +1,54 @@
-.selected {
-  background-color: #CFD8DC !important;
-  color: white;
-}
+
 .postcodes {
-  margin: 0 0 2em 0;
+  margin: 0 0 1.7em 0;
   list-style-type: none;
   padding: 0;
-  width: 15em;
+  width: 20em;
 }
 .postcodes li {
   cursor: pointer;
   position: relative;
   left: 0;
+  color: black;
   background-color: #EEE;
   margin: .5em;
   padding: .3em 0;
   height: 1.6em;
   border-radius: 4px;
 }
+
+.postcodes li.enabled_false {
+  background-color: #aaa;
+  color: #666;
+}
+
+.selected {
+  color: black;
+  background-color: orange !important;  
+}
+
 .postcodes li:hover {
-  color: #607D8B;
-  background-color: #DDD;
+  color: white;
+  background-color: orange;
   left: .1em;
 }
+
 .postcodes li.selected:hover {
-  background-color: #BBD8DC !important;
   color: white;
+  background-color: orangered !important;  
 }
+
 .postcodes .text {
   position: relative;
-  top: -3px;
+  top: -2px;
 }
 .postcodes .badge {
+  width: 3em;
   display: inline-block;
   font-size: small;
+  font-weight: bold;
   color: white;
-  padding: 0.8em 0.7em 0 0.7em;
-  background-color: #607D8B;
+  background-color: purple;
   line-height: 1em;
   position: relative;
   left: -1px;
@@ -44,6 +56,7 @@
   height: 1.8em;
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
+  padding: 0.8em 0.7em 0 0.7em;
 }
 button {
   font-family: Arial;
