--- a/templates/postcode list.html
+++ b/templates/postcode list.html
@@ -10,8 +10,10 @@
 <ul class="postcodes">
     <li *ngFor="let postcode of postcodes" 
         (click)="onSelect(postcode)" 
-        [class.selected]="postcode === selectedPostcode">
-        <span class="badge">{{postcode.code}}</span> {{postcode.description}}
+        [class.selected]="postcode === selectedPostcode"
+        [class.enabled_false]="postcode.enabled == false">
+        <span class="badge">{{postcode.code}}</span> 
+        <span class="text">{{postcode.description}}</span>
         <button class="delete" (click)="delete(postcode); $event.stopPropagation()">x</button>
     </li>
 </ul>
