--- a/public/style.css
+++ b/public/style.css
@@ -1,41 +1,3 @@
 body {
-  color: #333 !important;
-  font: 400 16px/24px Roboto, sans-serif;
+    padding-top: 5rem;
 }
-
-/* Master Styles */
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 200%;
-}
-h2, h3 {
-  color: #444;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: lighter;
-}
-body {
-  margin: 0.5em 2em;
-}
-body, input[text], button {
-  color: #888;
-  font-family: Cambria, Georgia;
-}
-/* . . . */
-/* everywhere else */
-* {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-#topBar {
-  /*background-color: rgb(152, 53, 146);*/
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(122, 42, 118)), to(rgb(152, 53, 146)));
-  background-image: -webkit-linear-gradient(top, rgb(122, 42, 118), rgb(152, 53, 146));
-  background-image: -moz-linear-gradient(top, rgb(122, 42, 118), rgb(152, 53, 146));
-  background-image: linear-gradient(to bottom, rgb(122, 42, 118), rgb(152, 53, 146));
-  color: #eee;
-  padding: 6px 12px;
-  border-radius: 2px;
-}
-
-#topBar h1 { color: #eee; margin:auto; }
