--- a/templates/app nav.html
+++ b/templates/app nav.html
@@ -3,6 +3,6 @@
     <li class="nav-item" ><a routerLink="/dashboard" class="nav-link" routerLinkActive="active">Home</a></li>
     <li class="nav-item" ><a routerLink="/postcodes" class="nav-link" routerLinkActive="active">Post codes</a></li>
     <li class="nav-item" ><a routerLink="/agencies" class="nav-link" routerLinkActive="active">Agencies</a></li>
-    <li class="nav-item" ><a routerLink="/agencies/stats" class="nav-link" routerLinkActive="active">Agencies Stats</a></li>
+    <li class="nav-item" ><a routerLink="/agencies-stats" class="nav-link" routerLinkActive="active">Agencies Stats</a></li>
 </ul>
 </nav>
