Use Bootstrap feature in Agencies statistics page.

--- a/public/style.css
+++ b/public/style.css
@@ -2,10 +2,8 @@ body {
   /* for fixed header bar */
     /*padding-top: 5rem;*/
     /* for jumbotron */
+    color: #666;
 }
-
-
-
 
 /* narrow jumbotron.css / downloaded from example */
 
