--- a/templates/agency stats.html
+++ b/templates/agency stats.html
@@ -1,32 +1,44 @@
-<h2>Agency Statistics </h2>
-
-<div>
-    <label>Post code</label>    
-    <select class="form-control" [(ngModel)]="postcode">
-        <option >select one</option>
-        <option *ngFor="let p of postcodes" [ngValue]="p">{{p.description}}</option>
-    </select>
-    <button (click)="search()">Search</button>
-</div>
+<h3>Agency Statistics <small class="text-muted">{{postcode ? 'for "' + postcode.code + '"' : '' }}</small></h3>
 
 <hr>
 
-<div *ngIf="!stats || stats.length == 0">
-    No properties found
-</div>
+<div class="container content">
+    <div class="float-left" style="width:10em">
+        <div class="nav-pills">
+            <h4>Post code</h4>
+            <div *ngFor="let p of postcodes" (click)="postcode = p; search();"  style="display: block-inline">
+                <h6 [ngClass]="{'postcode-active': postcode == p}" class="postcode-item">{{p.description}}</h6>
+            </div>
+        </div>
+    </div>
+    <div class="float-left">
+        <div *ngIf="!stats">            
+            <blockquote class="blockquote">
+                <em>select a post code</em>
+            </blockquote>
+        </div>
 
-<div *ngIf="stats.length > 0">
-    <table>
-        <thead>
-            <th colspan="2">Agency</th>
-            <th>No. Properties</th>           
-        </thead>
-        <tbody>
-            <tr *ngFor="let record of stats; let i = index">
-                <td>{{record.agency.code}}</td>
-                <td>{{record.agency.name}}</td>
-                <td>{{record.noProperties}}</td>
-            </tr>
-        </tbody>
-    </table>
+        <div *ngIf="stats && stats.length == 0" class="alert alert-info">
+            <strong>No properties found</strong>
+        </div>
+
+        <div *ngIf="stats && stats.length > 0">
+            <table class="table table-striped table-sm table-hover">
+                <thead>
+                    <th colspan="2">Agency</th>
+                    <th>No. Properties</th>   
+                </thead>
+                <tbody>
+                    <tr *ngFor="let record of stats; let i = index">
+                        <td>{{record.agency.code}}</td>
+                        <td>{{record.agency.name}}</td>
+                        <td>{{record.noProperties}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
+<div class="clearfix"></div>
+
+<hr>
