--- a/templates/agency stats.html
+++ b/templates/agency stats.html
@@ -1,44 +1,46 @@
-<h3>Agency Statistics <small class="text-muted">{{postcode ? 'for "' + postcode.code + '"' : '' }}</small></h3>
+<h1>Agency Statistics <small class="text-muted">{{postcode ? 'for "' + postcode.code + '"' : '' }}</small></h1>
 
-<hr>
+<section>
+<div class="container-fluid content">
+    <div class="row">
+        <div class="col-md-2 border-right-0">
+            <nav class="nav-pills">
+                <h4>Post code</h4>
+                <div *ngIf="!postcodes">loading...</div>
+    
+                <div *ngFor="let p of postcodes" (click)="postcode = p; search();"  style="display: block-inline">
+                    <h6 [ngClass]="{'postcode-active': postcode == p}" class="postcode-item">{{p.description}}</h6>
+                </div>
+            </nav>
+        </div>
+        <div class="col-md-10">
+         
+            <blockquote class="blockquote" *ngIf="!stats"><em>select a post code</em></blockquote>      
 
-<div class="container content">
-    <div class="float-left" style="width:10em">
-        <div class="nav-pills">
-            <h4>Post code</h4>
-            <div *ngFor="let p of postcodes" (click)="postcode = p; search();"  style="display: block-inline">
-                <h6 [ngClass]="{'postcode-active': postcode == p}" class="postcode-item">{{p.description}}</h6>
+            <div *ngIf="isStatsLoading"><em>loading...</em></div> 
+
+            <blockquote class="blockquote" *ngIf="stats && stats.length == 0">
+                <em>no properties for this post code</em>
+            </blockquote>
+
+            <div *ngIf="!isStatsLoading && stats && stats.length > 0">            
+                <table class="table table-striped table-sm table-hover">
+                    <thead>
+                        <th colspan="2">Agency</th>
+                        <th>No. Properties</th>   
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let record of stats; let i = index">
+                            <td>{{record.agency.code}}</td>
+                            <td>{{record.agency.name}}</td>
+                            <td>{{record.noProperties}}</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
-    <div class="float-left">
-        <div *ngIf="!stats">            
-            <blockquote class="blockquote">
-                <em>select a post code</em>
-            </blockquote>
-        </div>
-
-        <div *ngIf="stats && stats.length == 0" class="alert alert-info">
-            <strong>No properties found</strong>
-        </div>
-
-        <div *ngIf="stats && stats.length > 0">
-            <table class="table table-striped table-sm table-hover">
-                <thead>
-                    <th colspan="2">Agency</th>
-                    <th>No. Properties</th>   
-                </thead>
-                <tbody>
-                    <tr *ngFor="let record of stats; let i = index">
-                        <td>{{record.agency.code}}</td>
-                        <td>{{record.agency.name}}</td>
-                        <td>{{record.noProperties}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
 </div>
-<div class="clearfix"></div>
+</section>
 
-<hr>
+<div class="clearfix"></div>
