--- a/templates/loading.html
+++ b/templates/loading.html
@@ -1,8 +1,7 @@
-<span class="loading">
+<span class="loading" [hidden]="isVisible == 'false'">
     <span></span>
     <span></span>
     <span></span>
     <span></span>
     <span></span>
 </span>
-
