--- a/templates/agency stats.html
+++ b/templates/agency stats.html
@@ -3,7 +3,7 @@
 <section>
 <div class="container-fluid content">
     <div class="row">
-        <div class="col-md-2 border-right-0">
+        <div class="col-md-2">
             <nav class="nav-pills">
                 <h4>Post code</h4>
                 <pw-loading when="{{!postcodes}}"></pw-loading>
@@ -15,7 +15,7 @@
         </div>
         <div class="col-md-10">
          
-            <blockquote class="blockquote" *ngIf="!stats"><em>select a post code</em></blockquote>      
+            <blockquote class="blockquote" *ngIf="!isStatsLoading && !stats"><em>select a post code</em></blockquote>      
 
             <pw-loading when="{{isStatsLoading}}"></pw-loading>
 
@@ -26,12 +26,14 @@
             <div *ngIf="!isStatsLoading && stats && stats.length > 0">            
                 <table class="table table-striped table-sm table-hover">
                     <thead>
+                        <th>#</th>
                         <th colspan="2">Agency</th>
                         <th>No. Properties</th>   
                     </thead>
                     <tbody>
                         <tr *ngFor="let record of stats; let i = index">
-                            <td>{{record.agency.code}}</td>
+                            <th scope="row">{{i+1}}</th>
+                            <td>{{record.agency.code}}</td>                            
                             <td>{{record.agency.name}}</td>
                             <td>{{record.noProperties}}</td>
                         </tr>
