--- a/templates/app nav.html
+++ b/templates/app nav.html
@@ -1,8 +1,9 @@
 <nav>
 <ul class="nav nav-pills float-right">
-    <li class="nav-item" ><a routerLink="/dashboard" class="nav-link" routerLinkActive="active">Home</a></li>
-    <li class="nav-item" ><a routerLink="/postcodes" class="nav-link" routerLinkActive="active">Post codes</a></li>
-    <li class="nav-item" ><a routerLink="/agencies" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Agencies</a></li>
-    <li class="nav-item" ><a routerLink="/agencies/stats" class="nav-link" routerLinkActive="active">Agencies Stats</a></li>
+    <li class="nav-item"><a routerLink="/dashboard" class="nav-link" routerLinkActive="active">Home</a></li>
+    <li class="nav-item"><a routerLink="/postcodes" class="nav-link" routerLinkActive="active">Post codes</a></li>
+    <li class="nav-item"><a routerLink="/agencies" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Agencies</a></li>
+    <li class="nav-item"><a routerLink="/agencies/stats" class="nav-link" routerLinkActive="active">Agencies Stats</a></li>
+    <li class="nav-item"><a routerLink="/selldata" class="nav-link" routerLinkActive="active">Sell data</a></li>
 </ul>
 </nav>
