Add missing file "base.service.ts". Add HM Land Property attribution statement.

--- a/templates/sell data list.html
+++ b/templates/sell data list.html
@@ -67,6 +67,9 @@
         </div>
     </div>
 </div>
+
+<blockquote class="blockquote">Data produced by HM Land Registry © Crown copyright 2017.</blockquote>
+
 </section>
 
 <div class="clearfix"></div>
