--- a/templates/sell data list.html
+++ b/templates/sell data list.html
@@ -68,7 +68,7 @@
     </div>
 </div>
 
-<blockquote class="blockquote">Data produced by HM Land Registry © Crown copyright 2017.</blockquote>
+<p class="attribution-statement" *ngIf="sellDataList && sellDataList.length > 0">Data produced by HM Land Registry © Crown copyright 2017.</p>
 
 </section>
 
