Create PAgerService. Client pagination for Agencies.

--- a/public/style.css
+++ b/public/style.css
@@ -99,3 +99,5 @@ body {
 }
 
 .attribution-statement { font-size: 0.8em; background-color: #eee; border-radius: 5px; padding:5px 2em; }
+
+.pagination a { cursor:pointer; }
