--- a/templates/agency list.html
+++ b/templates/agency list.html
@@ -1,22 +1,30 @@
 <h1>Agencies</h1>
 <div>
     <ul>
-        <li *ngFor="let agency of agencies">
-            <span>{{agency.code}} - {{agency.name}}</span>
+        <li *ngFor="let agency of pagedItems; let i = index">
+            <span style="width: 4em">{{i+1}}</span><span> {{agency.code}} - {{agency.name}}</span>
         </li>
     </ul>
 </div>
 
-<nav aria-label="Page navigation example">
-  <ul class="pagination justify-content-center">
-    <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1">Previous</a>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#">Next</a>
-    </li>
+<!-- pager -->
+<nav>
+  <ul *ngIf="pager.pages && pager.pages.length" class="pagination pagination-sm justify-content-center">
+      <li class="page-item" [ngClass]="{disabled:pager.currentPage === 1}">
+          <a class="page-link" (click)="setPage(1)">First</a>
+      </li>
+      <li class="page-item" [ngClass]="{disabled:pager.currentPage === 1}">
+          <a class="page-link" (click)="setPage(pager.currentPage - 1)">Previous</a>
+      </li>
+      <li class="page-item" *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
+          <a class="page-link" (click)="setPage(page)">{{page}}</a>
+      </li>
+      <li class="page-item" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
+          <a class="page-link" (click)="setPage(pager.currentPage + 1)">Next</a>
+      </li>
+      <li class="page-item" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
+          <a class="page-link" (click)="setPage(pager.totalPages)">Last</a>
+      </li>
   </ul>
 </nav>
+<!-- Bootstrap 4 Pagination: https://v4-alpha.getbootstrap.com/components/pagination -->
