--- a/templates/sell data list.html
+++ b/templates/sell data list.html
@@ -23,7 +23,7 @@
             </blockquote>
 
             <div *ngIf="!isLoadingSellData && sellDataList && sellDataList.length > 0">            
-                <table class="table table-striped table-sm table-hover">
+                <table class="table table-striped table-sm table-hover table-dense">
                     <thead>
                         <th>#</th>
                         <th>Date</th>                        
