--- a/public/style.css
+++ b/public/style.css
@@ -107,3 +107,4 @@ table.table-dense {
 
 .pagination a { cursor:pointer; }
 .pagination-sm .page-link { min-width:2.5em; text-align: center; } /* prevent different size for 1 or 2 digits apge numer */
+.pagination li.disabled { color: #999; }
